[gd_scene load_steps=5 format=3 uid="uid://cwd3k6r07t102"]

[ext_resource type="Script" path="res://Objects/rock.gd" id="1_sbm1h"]
[ext_resource type="Texture2D" uid="uid://cn6dc3r57pfff" path="res://Assets/Rock.png" id="1_sdg8o"]

[sub_resource type="Curve" id="Curve_tgahx"]
_data = [Vector2(0, 0.261713), 0.0, 2.77871, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_xc4bf"]
offsets = PackedFloat32Array(0, 0.671111, 1)
colors = PackedColorArray(0.494118, 0.356863, 0.301961, 1, 0.737255, 0.509804, 0.266667, 1, 0.74, 0.511093, 0.2664, 0)

[node name="Rock" type="Node2D"]
script = ExtResource("1_sbm1h")

[node name="RockParticles" type="CPUParticles2D" parent="."]
amount = 80
lifetime = 1.5
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, -10)
initial_velocity_max = 13.0
scale_amount_min = 0.5
scale_amount_max = 2.5
scale_amount_curve = SubResource("Curve_tgahx")
color_ramp = SubResource("Gradient_xc4bf")
hue_variation_min = 0.15
hue_variation_max = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("1_sdg8o")

[node name="ShakeTimer" type="Timer" parent="."]

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
